--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import "./style/history.css";
 
 * {
   margin: 0;
@@ -17,7 +18,7 @@ body {
 
 .screen {
   height: 4rem;
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
 }
 
 .wrapper {
